Avoid overflowing images

--- a/src/views/Docs/Docs.scss
+++ b/src/views/Docs/Docs.scss
@@ -69,6 +69,10 @@
       margin-bottom: 1rem;
     }
 
+    a > img {
+      max-width: 100%;
+    }
+
     table {
       margin-bottom: 0.5rem;
       font-size: 0.85em;
